@@ -10,6 +10,7 @@ Changes in CVS:
 Produced by Jim Shore and Levi Khatskevitch.
 * Added an ImageButtonTester.Click overload that takes no arguments.  Credit to Kyle Heon.
 * Added CLS compliance (except for certain members).  Credit to Levi Khatskevitch and Michael Ridgway.
+* Added HTTP proxy support to the Browser (HttpClient) object.  Credit to Torin Ford
 
 Changes in NUnitAsp 1.4.1:
 Produced by Jim Shore and Levi Khatskevitch.
